objects/VPPSR_Search_By_Serial_Num_Resp_Type__c.object
<CustomObject>
    <fields>
        <fullName>Veda_PPSR_SerialNumber_Search_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda PPSR SerialNumber Search Response</label>
        <referenceTo>VPPSR_Serial_Number_Search_Response__c</referenceTo>
        <relationshipName>Search_By_Serial_Num_Resp_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>customers_Request_Message_Id__c</fullName>
        <label>customers Request Message Id;</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>request_Processed_Date_Time__c</fullName>
        <label>request Processed Date Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSE Search By Serial Num Resp Type</label>
    <nameField>
        <displayFormat>VSSN-{00000000}</displayFormat>
        <label>Search By Serial Num Resp Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Search By Serial Num Resp Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>